--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,7 @@ jobs:
       - run: apt-get update
       - run: apt-get -y install build-essential mysql-client
       - run: mysql -e "create database seccubus"
-      - run: mysql -e "grant all on seccubus.* to `seccubus` defined by `seccubus`"
+      - run: mysql -e "grant all on seccubus.* to 'seccubus' defined by 'seccubus'"
       - run: mysql -e "create database seccubus_create"
       - run: mysql -e "create database seccubus_upgrade"
       - restore_cache:
