More logical grouping of tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,24 +18,7 @@ jobs:
           paths:
             - "/usr/local/lib/perl5/site_perl"
 
-  tests_0:
-    docker:
-      - image: perl:latest
-        environment:
-        - PERL5LIB: "."
-
-    steps:
-      - checkout
-      - run:
-          name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip bsdmainutils
-      - restore_cache:
-          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
-      - run:
-          name: Unit test
-          command: prove t/0*
-
-  tests_2:
+  basics:
     docker:
       - image: perl:latest
         environment:
@@ -48,7 +31,7 @@ jobs:
       - checkout
       - run:
           name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip bsdmainutils mysql-client
+          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client
       - run:
           name: Wait for database
           command: |
@@ -66,9 +49,9 @@ jobs:
           key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
       - run:
           name: Unit test
-          command: prove t/2*
+          command: prove t/[028]*
 
-  tests_5:
+  mojo:
     docker:
       - image: perl:latest
         environment:
@@ -80,7 +63,7 @@ jobs:
       - checkout
       - run:
           name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip bsdmainutils mysql-client
+          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client
       - run:
           name: Wait for database
           command: |
@@ -96,9 +79,9 @@ jobs:
           key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
       - run:
           name: Unit test
-          command: prove t/5*
+          command: prove t/[56]*
 
-  tests_6:
+  ssllabs:
     docker:
       - image: perl:latest
         environment:
@@ -110,67 +93,7 @@ jobs:
       - checkout
       - run:
           name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip bsdmainutils mysql-client
-      - run:
-          name: Wait for database
-          command: |
-            while ! echo -n > /dev/tcp/127.0.0.1/3306; do
-              sleep 1
-              echo -n .
-            done
-      - run:
-          name: Create database(s)
-          command: |
-            mysql -e "create database seccubus"
-      - restore_cache:
-          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
-      - run:
-          name: Unit test
-          command: prove t/6*
-
-  tests_8:
-    docker:
-      - image: perl:latest
-        environment:
-        - PERL5LIB: "."
-        - MYSQL_HOME: "/root/project/.circleci"
-      - image: circleci/mysql:latest
-
-    steps:
-      - checkout
-      - run:
-          name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip bsdmainutils mysql-client
-      - run:
-          name: Wait for database
-          command: |
-            while ! echo -n > /dev/tcp/127.0.0.1/3306; do
-              sleep 1
-              echo -n .
-            done
-      - run:
-          name: Create database(s)
-          command: |
-            mysql -e "create database seccubus"
-      - restore_cache:
-          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
-      - run:
-          name: Unit test
-          command: prove t/8*
-
-  tests_90:
-    docker:
-      - image: perl:latest
-        environment:
-        - PERL5LIB: "."
-        - MYSQL_HOME: "/root/project/.circleci"
-      - image: circleci/mysql:latest
-
-    steps:
-      - checkout
-      - run:
-          name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip bsdmainutils mysql-client
+          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client
       - run:
           name: Wait for database
           command: |
@@ -188,7 +111,7 @@ jobs:
           name: Unit test
           command: prove t/90*
 
-  tests_91:
+  testssl:
     docker:
       - image: perl:latest
         environment:
@@ -200,7 +123,7 @@ jobs:
       - checkout
       - run:
           name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip bsdmainutils mysql-client
+          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client
       - run:
           name: Wait for database
           command: |
@@ -225,24 +148,15 @@ workflows:
   prep_environment:
     jobs:
       - debs
-      - tests_0:
+      - basics:
           requires:
             - debs
-      - tests_2:
+      - mojo:
           requires:
             - debs
-      - tests_5:
+      - ssllabs:
           requires:
             - debs
-      - tests_6:
-          requires:
-            - debs
-      - tests_8:
-          requires:
-            - debs
-      - tests_90:
-          requires:
-            - debs
-      - tests_91:
+      - testssl:
           requires:
             - debs
