--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -141,6 +141,36 @@ jobs:
           name: Unit test
           command: prove t/91*
 
+  build:
+    docker:
+      - image: perl:latest
+        environment:
+        - PERL5LIB: "."
+#        - MYSQL_HOME: "/root/project/.circleci"
+#      - image: circleci/mysql:latest
+
+    steps:
+      - checkout
+      - run:
+          name: Install prerequisite packages
+          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client default-jre
+#      - run:
+#          name: Wait for database
+#          command: |
+#            while ! echo -n > /dev/tcp/127.0.0.1/3306; do
+#              sleep 1
+#              echo -n .
+#            done
+#      - run:
+#          name: Create database(s)
+#          command: |
+#            mysql -e "create database seccubus"
+      - restore_cache:
+          key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
+      - run:
+          name: Build
+          command: ./build_all
+
 workflows:
 
   version: 2
@@ -160,3 +190,9 @@ workflows:
       - testssl:
           requires:
             - debs
+      - build:
+          requires:
+            - basics
+            - mojo
+            - ssllabs
+            - testssl
