--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -189,6 +189,9 @@ workflows:
   prep_environment:
     jobs:
       - debs
+
+  unit_tests:
+    jobs:
       - basics:
           requires:
             - debs
@@ -201,6 +204,9 @@ workflows:
       - testssl:
           requires:
             - debs
+
+  package_builds:
+    jobs:
       - build:
           requires:
             - debs
