--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,6 +223,6 @@ workflows:
           requires:
             - debs
       - build_deb
-      - check_deb_debian9
+      - check_deb_debian9:
           requires:
             build_deb
