--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -192,7 +192,7 @@ jobs:
       - run: apt-get update
       - run:
           name: Install package (shoud fail)
-          command: dpkg -i /root/project/*.deb; if [ $? == 0 ]; then echo "This should have failed, but did not"; exit 99; else ; exit 0 ; fi
+          command: dpkg -i /root/project/build/*.deb; if [ $? == 0 ] ; then echo "NOT ok"; exit 99; else echo "OK" ; fi
       - run:
           name: Install failed packages (shoud work)
           command: apt-get install -f -y
