--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
         - PERL5LIB: "."
         - MYSQL_HOME: "/root/project/.circleci"
       - image: circleci/mysql:latest
-    parallelism: 8
+    parallelism: 4
 
     steps:
       - checkout
@@ -99,7 +99,7 @@ jobs:
           command: apt-get install -f -y
       - run:
           name: Seccubus should be running on port 8443
-          command: echo -n >/proc/tcp/localhost/8443
+          command: echo -n >/dev/tcp/localhost/8443
 
 workflows:
 
