--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,9 +82,66 @@ jobs:
       - store_artifacts:
           path: /root/project/build
 
+  check_deb_debian7:
+    docker:
+      - image: debian:7
+
+    steps:
+      - run: apt-get update; apt-get install -y ca-certificates
+      - restore_cache:
+          key: deb-{{ .Branch }}
+      - run:
+          name: Install package (shoud fail)
+          shell: bash -ex
+          command: if dpkg -i /root/project/build/*.deb; then echo "NOT ok"; exit 99; else echo "OK" ; fi
+      - run:
+          name: Install failed packages (shoud work)
+          command: apt-get install -f -y
+      - run:
+          name: Seccubus should be running on port 8443
+          command: echo -n >/dev/tcp/localhost/8443
+
+  check_deb_debian8:
+    docker:
+      - image: debian:8
+
+    steps:
+      - run: apt-get update; apt-get install -y ca-certificates
+      - restore_cache:
+          key: deb-{{ .Branch }}
+      - run:
+          name: Install package (shoud fail)
+          shell: bash -ex
+          command: if dpkg -i /root/project/build/*.deb; then echo "NOT ok"; exit 99; else echo "OK" ; fi
+      - run:
+          name: Install failed packages (shoud work)
+          command: apt-get install -f -y
+      - run:
+          name: Seccubus should be running on port 8443
+          command: echo -n >/dev/tcp/localhost/8443
+
   check_deb_debian9:
     docker:
       - image: debian:9
+
+    steps:
+      - run: apt-get update; apt-get install -y ca-certificates
+      - restore_cache:
+          key: deb-{{ .Branch }}
+      - run:
+          name: Install package (shoud fail)
+          shell: bash -ex
+          command: if dpkg -i /root/project/build/*.deb; then echo "NOT ok"; exit 99; else echo "OK" ; fi
+      - run:
+          name: Install failed packages (shoud work)
+          command: apt-get install -f -y
+      - run:
+          name: Seccubus should be running on port 8443
+          command: echo -n >/dev/tcp/localhost/8443
+
+  check_deb_kali:
+    docker:
+      - image: kalilinux/kali-linux-docker:latest
 
     steps:
       - run: apt-get update; apt-get install -y ca-certificates
@@ -116,5 +173,14 @@ workflows:
     jobs:
       - build_deb
       - check_deb_debian9:
+          requires:
+            - build_deb
+      - check_deb_debian8:
+          requires:
+            - build_deb
+      - check_deb_debian7:
+          requires:
+            - build_deb
+      - check_deb_kali:
           requires:
             - build_deb
