I love YML... Not!

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,12 +92,11 @@ jobs:
           name: Install package (shoud fail)
           shell: bash -ex
           command: if dpkg -i /root/project/build/*.deb; then echo "NOT ok"; exit 99; else echo "OK" ; fi
+      - run: sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
+      - run: sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
       - run:
           name: Install failed packages (shoud work)
-          command: |
-          sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
-          sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-          sudo apt-get -y install mysql-serverapt-get install -f -y
+          command: sudo apt-get -y install mysql-serverapt-get install -f -y
       - run:
           name: Seccubus should be running on port 8443
           command: echo -n >/dev/tcp/localhost/8443
@@ -110,13 +109,12 @@ jobs:
       - run: apt-get update; apt-get install -y ca-certificates
       - restore_cache:
           key: deb-{{ .Branch }}
+      - run: sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
+      - run: sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
       - run:
           name: Install package (shoud fail)
           shell: bash -ex
-          command: |
-          sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
-          sudo debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
-          sudo apt-get -y install mysql-serverapt-get install -f -y
+          command: sudo apt-get -y install mysql-serverapt-get install -f -y
       - run:
           name: Install failed packages (shoud work)
           command: apt-get install -f -y
