--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - checkout
       - run:
           name: Unshallow source (if needed)
-          command: [ -f .git/shallow ] && git fetch --unshallow
+          command: "[ -f .git/shallow ] && git fetch --unshallow"
       - run:
           name: Install prerequisite packages
           command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client
