--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,11 +13,8 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Unshallow source (if needed)
-          command: "[ -f .git/shallow ] && git fetch --unshallow"
-      - run:
           name: Install prerequisite packages
-          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client
+          command: apt-get update; apt-get -y install build-essential zip dnsutils bsdmainutils mysql-client git
       - restore_cache:
           key: cpanm-{{ .Branch }}-{{ checksum "Makefile.PL" }}
       - run: cpanm --notest REHSACK/List-MoreUtils-XS-0.425_001.tar.gz
@@ -39,6 +36,7 @@ jobs:
             mysql -e "create database seccubus"
             mysql -e "create database seccubus_create"
             mysql -e "create database seccubus_upgrade"
+      - run: if [ -e .git/shallow ]; then git fetch --unshallow; fi
       - run:
           name: Unit test
           command: circleci tests glob t/* | circleci tests split --split-by=timings --timings-type=filename | xargs -n 1 prove
@@ -88,7 +86,7 @@ jobs:
       - image: debian:7
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates
+      - run: apt-get update; apt-get install -y ca-certificates mysql-server
       - restore_cache:
           key: deb-{{ .Branch }}
       - run:
@@ -109,15 +107,15 @@ jobs:
       - image: debian:8
 
     steps:
-      - run: apt-get update; apt-get install -y ca-certificates
+      - run: apt-get update; apt-get install -y ca-certificates mysql-server
       - restore_cache:
           key: deb-{{ .Branch }}
-      - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
-      - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
       - run:
           name: Install package (shoud fail)
           shell: bash -ex
-          command: apt-get install -f -y
+          command: if dpkg -i /root/project/build/*.deb; then echo "NOT ok"; exit 99; else echo "OK" ; fi
+      - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password password your_password'
+      - run: debconf-set-selections <<< 'mysql-server mysql-server/root_password_again password your_password'
       - run:
           name: Install failed packages (shoud work)
           command: apt-get install -f -y
